tests/baselines/reference/symbolType1.errors.txt
tests/cases/conformance/es6/Symbols/symbolType1.ts(1,1): error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.
tests/cases/conformance/es6/Symbols/symbolType1.ts(2,19): error TS2359: The right-hand side of an 'instanceof' expression must be of type 'any', a function, or of a type assignable to the 'HasInstanceCheckable' interface type.
tests/cases/conformance/es6/Symbols/symbolType1.ts(4,19): error TS2359: The right-hand side of an 'instanceof' expression must be of type 'any', a function, or of a type assignable to the 'HasInstanceCheckable' interface type.
  Type 'symbol' is not assignable to type 'HasInstanceCheckable'.


==== tests/cases/conformance/es6/Symbols/symbolType1.ts (3 errors) ====
    Symbol() instanceof Symbol;
    ~~~~~~~~
!!! error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.
    Symbol instanceof Symbol();
                      ~~~~~~~~
!!! error TS2359: The right-hand side of an 'instanceof' expression must be of type 'any', a function, or of a type assignable to the 'HasInstanceCheckable' interface type.
    (Symbol() || {}) instanceof Object; // This one should be okay, it's a valid way of distinguishing types
    Symbol instanceof (Symbol() || {});
                      ~~~~~~~~~~~~~~~~
!!! error TS2359: The right-hand side of an 'instanceof' expression must be of type 'any', a function, or of a type assignable to the 'HasInstanceCheckable' interface type.
!!! error TS2359:   Type 'symbol' is not assignable to type 'HasInstanceCheckable'.